# mail2phone

./: Cargo.toml  config.example.toml  flake.nix
.github/workflows/: ci.yml
flakes/: build-static.nix  build.nix  docker.nix
nix/lib/: crossBuild.nix  default.nix  mkCrossCraneLib.nix  mkCrossPkgs.nix  mkFormula.nix
src/: config.rs  main.rs
src/mail/: mod.rs  poller.rs  processor.rs
src/notification/: mod.rs  pushover.rs
