[package]
name = "mail2phone"
version = "0.1.0"
edition = "2021"

[dependencies]
native-tls = "0.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
log = "0.4"
env_logger = "0.10"
imap = "2.4.1"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
