[package]
name = "mail2phone"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10"
imap = { version = "3.0.0-alpha.15", features = [
    "rustls-tls",
], default-features = false }
log = "0.4"
reqwest = { version = "0.11", features = [
    "json",
    "blocking",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
